# financial-news-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  config.example.toml  main.py  pyproject.toml  server.py
.claude/agents/: pre-commit.md
.github/: CODEOWNERS
.github/workflows/: ci.yaml  diagnostic.yaml  monitor.yaml
docs/: AGENTS.md  SKILL.md  developer-infra.md  engineering-standards.md  z_score_iteration.md
financial_news/: __init__.py  analysis.py  briefing.py  config.py  diagnostic.py  email_report.py  enrichment.py  log_setup.py  monitor.py  sentiment.py  server.py  snapshot.py
tests/: conftest.py  test_boundary.py  test_briefing.py  test_calculate_z_score.py  test_config.py  test_diagnostic.py  test_e2e_deterministic.py  test_email_report.py  test_enrichment.py  test_get_news_volume.py  test_logging.py  test_monitor.py  test_monitor_otlp.py  test_sentiment.py  test_snapshot.py
